# pong

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: integration-test.yml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
server/: Dockerfile  alembic.ini  animation.py  docker-compose.yml  logger.py  main.py  pyproject.toml  server_test.py
server/api/: endpoints.py  websockets.py
server/core/: game_loop.py
server/database/: config.py  models.py
server/domain/: ball.py  game.py  paddle.py
server/migrations/: env.py
server/migrations/versions/: initial.py
server/networking/: binary_protocol.py  game_room_manager.py  game_update_manager.py  room_manager.py
server/physics/: animation.py  game_elements.py  run.py
server/tests/: integration.py
